# PrintBroker

./: .env.example  .env.txt  .replit  Dockerfile  README.md  auto-git.sh  backup_20250610_170751.sql  design-history.json  docker-compose.yml  drizzle.config.js  index.html  jest.config.js  notifications.json  package-lock.json  package.json  pyproject.toml  render.yaml  tsconfig.client.json  tsconfig.json  tsconfig.server.json  vite.config.ts
.git_backup/: COMMIT_EDITMSG  FETCH_HEAD  config  index
attached_assets/: Pasted-Mevcut-PDF-y-kleme-ve-dizilim-sistemimizi-geli-tirmek-i-in-Python-tabanl-bir-mikroservis-eklememiz--1749145238620_1749145238622.txt
client/: index.html  vite.config.ts
logs/: .68407aa9f9258831f702db836443b9077eaeec6a-audit.json
prisma/: schema.prisma
python_service/: README.md  requirements.txt
scripts/: backup.sh
server/: advancedLayoutEngine.ts  advancedPythonAnalyzer.py  aiDesignAnalyzer.ts  aiDesignService.ts  aiLayoutOptimizer.ts  app.ts  auth.ts  backupBeforeMigration.ts  config.js  config.ts  contractService.ts  corsConfig.ts  dataProtection.ts  db.js  db.ts  enhancedMonitoring.ts  enhancedPDFAnalysis.py  enhancedPDFAnalyzer.ts  enterpriseLayoutEngine.ts  enterprisePDFGenerator.py  errorHandling.ts  fastApiClient.ts  fileProcessingService.ts  ideogramApi.ts  ideogramScraper.ts  index.js  index.ts  ipWhitelist.ts  layout_microservice.py  multiMethodAnalyzer.ts  oneClickLayoutSystem.ts  operationalLayoutSystem.ts  paytr.ts  pdfGenerator.py  pdfGeneratorJS.ts  plotterDataService.ts  professionalDesignAnalyzer.ts  (+12 more)
shared/: schema.ts
(+173 files in other folders)
